--- a/app/panels/home.html
+++ b/app/panels/home.html
@@ -13,7 +13,7 @@
 
 
     <div class="player-connect-head">
-      <div class="player-connect-head-text">joueur connecté</div>
+      <div class="player-connect-head-text">Joueur connecté</div>
       <div class="player-connect">Ping du serveur Minecraft...</div>
     </div>
 
