--- a/app/panels/settings.html
+++ b/app/panels/settings.html
@@ -2,12 +2,12 @@
     <div class="overlay">
 
         <div class="settingsNavbtn">
-            <button class="settingsbtn accountsettings">Account</button>
+            <button class="settingsbtn accountsettings">Comptes</button>
             <button class="settingsbtn ramsettings">Ram</button>
             <button class="settingsbtn javasettings">Java</button>
             <button class="settingsbtn resolutionsettings">Resolution</button>
             <button class="settingsbtn launchersettings">Launcher</button>
-            <button class="settingsbtn settingsSave">sauvegarder</button>
+            <button class="settingsbtn settingsSave">Sauvegarder</button>
         </div>
     </div>
 
@@ -15,7 +15,7 @@
     
 
     <div class="tabsettings accountsettingstab">
-      <button class="singout">singout</button>
+      <button class="singout">Fermer le launcher</button>
     </div>
 
 
